configured exclude rules for checkstyle, findbugs, pmd and jacoco